# ATEM-UI

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
atem-core/: Cargo.toml
atem-core/src/: client.rs  lib.rs
atem-ui/: Cargo.toml
atem-ui/src/: main.rs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: atem.ts
src/state/: atemStore.ts
