[package]
name = "atem-ui-tauri"
version = "0.1.0"
description = "ATEM UI Tauri host"
authors = ["Flowing"]
edition = "2021"

[lib]
name = "atem_ui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
atem-core = { path = "../atem-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
